tests/invalid/type/empty_list_no_context.pts
function main() : void {
    var x = [];
}
